src/pages/AddBook/addBook.module.scss
.add-book {
  width: 70%;
  margin: 0 auto;

  & > form {
    margin-bottom: 4rem;
    & > fieldset {
      min-width: auto;
      padding: revert;
      border: 1px solid #ced4da;
      margin: revert;
      padding: 3rem;
      border-radius: 0.5rem;

      & > legend {
        float: none;
        width: auto;
        padding: initial;
      }

      & > div {
        display: flex;
        flex-direction: column;
        // gap: 1rem;

        & .row {
          display: flex;
          align-items: center;
          justify-content: space-between;
          gap: 4%;

          & > label {
            flex: 1 1 auto;
          }
        }

        & .actions {
          margin-top: 2rem;
          display: flex;
          align-items: center;
          justify-content: space-between;

          & > button {
            flex: 0 1 30%;
          }
        }
      }
    }
  }
}

@media (max-width: 768px) {
  .add-book {
    & > form {
      & > fieldset {
        padding: 1rem;
        & > div {
          & .row {
            flex-direction: column;
            align-items: flex-start;

            & > label {
              width: 100%;
            }
          }
        }
      }
    }
  }
}

